[gd_scene load_steps=13 format=3 uid="uid://cgddg61hgp4ss"]

[ext_resource type="Texture2D" uid="uid://dlmbfr05wrrru" path="res://tilesets/sources/inner_edge_tile.png" id="1_0wnlc"]
[ext_resource type="Script" uid="uid://lm5f2q6ych6k" path="res://scripts/world/map_edge_display.gd" id="2_xkbqw"]
[ext_resource type="Script" uid="uid://c2m2m4ew56xes" path="res://scripts/gui/arrow_animator.gd" id="3_2ol7p"]
[ext_resource type="Texture2D" uid="uid://boaj3nm3jxtyj" path="res://sprites/left_arrow.png" id="4_cr4eq"]
[ext_resource type="Texture2D" uid="uid://cjpe07tw2dul" path="res://sprites/right_arrow.png" id="5_86ceo"]
[ext_resource type="Texture2D" uid="uid://iemuavr1ndih" path="res://sprites/up_arrow.png" id="6_06fl1"]
[ext_resource type="Texture2D" uid="uid://j7mrg4exvo45" path="res://sprites/down_arrow.png" id="7_gkfle"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_p102h"]
texture = ExtResource("1_0wnlc")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_0rc6f"]
sources/0 = SubResource("TileSetAtlasSource_p102h")

[sub_resource type="Animation" id="Animation_sl5c4"]
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeftArrowPositioner/LeftArrow:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-37, -31.5), Vector2(0, -31.5), Vector2(-37, -31.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightArrowPositioner/RightArrow:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UpArrowPositioner/UpArrow:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DownArrowPositioner/DownArrow:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_qf67e"]
resource_name = "arrow_oscillation"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeftArrowPositioner/LeftArrow:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-37, -31.5), Vector2(-55, -31.5), Vector2(-37, -31.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightArrowPositioner/RightArrow:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.75, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UpArrowPositioner/UpArrow:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.75, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DownArrowPositioner/DownArrow:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.75, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b5krw"]
_data = {
&"RESET": SubResource("Animation_sl5c4"),
&"arrow_oscillation": SubResource("Animation_qf67e")
}

[node name="MapEdgeDisplay" type="TileMapLayer"]
tile_set = SubResource("TileSet_0rc6f")
script = ExtResource("2_xkbqw")

[node name="ArrowAnimator" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_b5krw")
}
script = ExtResource("3_2ol7p")
oscillation_dist = 10.0

[node name="LeftArrowPositioner" type="Node2D" parent="."]
position = Vector2(87, -1)

[node name="LeftArrow" type="Sprite2D" parent="LeftArrowPositioner"]
texture_filter = 1
position = Vector2(-37, -31.5)
texture = ExtResource("4_cr4eq")

[node name="RightArrowPositioner" type="Node2D" parent="."]
position = Vector2(23, -1)

[node name="RightArrow" type="Sprite2D" parent="RightArrowPositioner"]
texture_filter = 1
texture = ExtResource("5_86ceo")

[node name="UpArrowPositioner" type="Node2D" parent="."]
position = Vector2(-81, -1)

[node name="UpArrow" type="Sprite2D" parent="UpArrowPositioner"]
texture_filter = 1
texture = ExtResource("6_06fl1")

[node name="DownArrowPositioner" type="Node2D" parent="."]
position = Vector2(-25, -1)

[node name="DownArrow" type="Sprite2D" parent="DownArrowPositioner"]
texture_filter = 1
texture = ExtResource("7_gkfle")
